feat(workout-exercises): add workout exercises endpoints
