# src/adapters/routes/users.ts
@@ -14,6 +14,9 @@ import { WorkoutTemplateExerciseController } from '@adapters/controllers/Workout
 import { WorkoutRepositoryImpl } from '@infrastructure/repositories/WorkoutRepositoryImpl'
 import { WorkoutService } from '@application/services/WorkoutService'
 import { WorkoutController } from '@adapters/controllers/WorkoutController'
+import { WorkoutExerciseRepositoryImpl } from '@infrastructure/repositories/WorkoutExerciseRepositoryImpl'
+import { WorkoutExerciseService } from '@application/services/WorkoutExerciseService'
+import { WorkoutExerciseController } from '@adapters/controllers/WorkoutExerciseController'
 
 export const usersRouter = express.Router() 
 
@@ -33,6 +36,10 @@ const workoutTemplateExerciseController = new WorkoutTemplateExerciseController(
 const workoutRepository = new WorkoutRepositoryImpl()
 const workoutService = new WorkoutService(workoutRepository)
 const workoutController = new WorkoutController(workoutService)
+
+const workoutExerciseRepository = new WorkoutExerciseRepositoryImpl()
+const workoutExerciseService = new WorkoutExerciseService(workoutExerciseRepository)
+const workoutExerciseController = new WorkoutExerciseController(workoutExerciseService)
 
 usersRouter.get('/:id', (res: Request, req: Response, next: NextFunction) => {
   /*  
@@ -213,4 +220,35 @@ usersRouter.delete('/:id/workouts/:workoutId', (req: Request, res: Response, nex
   #swagger.security = [{"bearerAuth": []}]
 */
   workoutController.deleteWorkout(req, res, next)
+})
+
+
+usersRouter.get('/:id/workouts/:workoutId/exercises/:exerciseId', (req: Request, res: Response, next: NextFunction) => {
+  /*  
+  #swagger.tags = ['Workout Exercises']
+  #swagger.responses[200] = { schema:{ $ref: "#/definitions/WorkoutExercise" } }
+  #swagger.security = [{"bearerAuth": []}]
+*/
+  workoutExerciseController.getWorkoutExerciseById(req, res, next)
+})
+
+usersRouter.get('/:id/workouts/:workoutId/exercises', (req: Request, res: Response, next: NextFunction) => {
+  /*  
+  #swagger.tags = ['Workout Exercises']
+  #swagger.responses[200] = { schema:{ $ref: "#/definitions/WorkoutExercises" } }
+  #swagger.security = [{"bearerAuth": []}]
+*/
+  workoutExerciseController.getAllWorkoutExercises(req, res, next)
+})
+
+usersRouter.patch('/:id/workouts/:workoutId/exercises/:exerciseId', (
+  req: Request, res: Response, next: NextFunction
+) => {
+  /*  
+  #swagger.tags = ['Workout Exercises']
+  #swagger.requestBody = { required: true, schema: { $ref: "#/definitions/UpdateWorkoutExercise" } }
+  #swagger.responses[200] = { schema:{ $ref: "#/definitions/WorkoutExercise" } }
+  #swagger.security = [{"bearerAuth": []}]
+*/
+  workoutExerciseController.updateWorkoutExercise(req, res, next)
 })
